--- a/location/templates/index2.html
+++ b/location/templates/index2.html
@@ -1,17 +1,17 @@
-<!DOCTYPE html>
-<html><head><meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
+{% extends "base.html" %}
+
+	{% block extra_head %}
 	<title>Leaflet Quick Start Guide Example</title>
 	<meta charset="utf-8">
-
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-
-    <link rel="stylesheet" href="http://cdn.leafletjs.com/leaflet-0.6.4/leaflet.css" />
+	<link rel="stylesheet" href="http://cdn.leafletjs.com/leaflet-0.6.4/leaflet.css" />
+	{% endblock %}
+    
     <!--[if lte IE 8]>
          <link rel="stylesheet" href="http://cdn.leafletjs.com/leaflet-0.6.4/leaflet.ie.css" />
     <![endif]-->
-	
-</head>
-<body>
+
+{% block content %}
 	<div id="map" style="width: 1200px; height: 600px; position: relative;" 
     class="leaflet-container leaflet-fade-anim" tabindex="0">
     <div class="leaflet-map-pane" style="-webkit-transform: translate3d(0px, 0px, 0);">
@@ -47,6 +47,7 @@
 		{% endfor %}
 		
 		route= new L.Polyline(points, {
+			color: 'blue',
 			weight: 3,
 			opacity: 0.5,
 			smoothFactor: 1
@@ -55,9 +56,6 @@
 		route.bringToFront();
 		{% endif %}
 		<!--var popup = L.popup(); -->
-
-
 	</script>
 
-
-</body></html>
+{% endblock %}
